Terraform/modules/security_group/main.tf
# ===========================================
# External Load Balancer Security Group
# ===========================================

resource "aws_security_group" "external_lb_sg" {
  name        = "${var.project_name}-external-lb-sg"
  description = "Security group for External Load Balancer"
  vpc_id      = var.vpc_id

  ingress {
    description = "Allow HTTP from Internet"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTPS from Internet"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-external-lb-sg"
  }
}

# ===========================================
# Private EC2 Servers Security Group
# ===========================================

resource "aws_security_group" "private_servers" {
  name        = "${var.project_name}-private-servers-sg"
  description = "Security group for Private EC2 Servers"
  vpc_id      = var.vpc_id

  ingress {
    description     = "Allow HTTP from ALB"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.external_lb_sg.id]
  }
  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-private-servers-sg"
  }
}
